Fix: Modify z-index of skip link and header due to map content overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ a#skip-link {
   font-weight: bold;
   border: 0.2rem solid #3396dc;
   padding: 0.3rem;
+  z-index: 2000;
 }
 
 a#skip-link:focus {
@@ -242,7 +243,7 @@ a#skip-link:focus {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 2000;
   height: 100px;
 }
 .inside #map-container {
